Fix home page grid on small screens

--- a/src/components/CardGrid.module.scss
+++ b/src/components/CardGrid.module.scss
@@ -1,6 +1,6 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   grid-gap: 2rem;
   margin-inline: auto;
 }
